# bbyycodes

AnalysisFramework/: CMakeLists.txt  README.md  setup.sh
AnalysisFramework/include/: Analysis_functions.h  Controller.h  DataAnalysis.h  JSONDoc.h  JSONParser.h  NtupleDumper.h  Plotting.h  PrettyPlotter.h  ROOTHelper.h  VariablePlotter.h  YieldIterator.h  algorithm.h  modelIterator.h  serializers.h
AnalysisFramework/json/: RunCondor.sh  SubmitCondor.py  computeYieldsEffs.js  computeYieldsEffs_allSelections.js  computeYieldsEffs_allSelections_HHNLOBugFix.js  computeYieldsEffs_allSelections_moreVariables.js  computeYieldsEffs_allSelections_nonResonantSignals.js  computeYieldsEffs_allSelections_resonantSignals.js  computeYieldsEffs_allSelections_test_h025.js  computeYieldsEffs_allSelections_test_h025_MGH7_X300tohh.js  computeYieldsEffs_allSelections_test_h025_aMCnlo_Hwpp_hh_yybb.js  computeYieldsEffs_allSelections_test_h025_ttH.js  computeYieldsEffs_cutflow.js  computeYieldsEffs_original.js  computeYieldsEffs_photonJetBkg.js  computeYieldsEffs_subset.js  computeYieldsEffs_subset_myy.js  dataAnalysis.js  submit.py
AnalysisFramework/json/H024/Non_Resonant/: Backgrounds.js  Data.js  PhotonJetBkg.js  Signals.js  Validation.js
AnalysisFramework/json/H024/Resonant/: Backgrounds.js  Data.js  PhotonJetBkg.js  computeYieldsEffs_cutflow.js
AnalysisFramework/json/H024/ZH/: PhotonJetBkg.js  Signals.js
AnalysisFramework/json/H025/: computeYieldsEffs_allSelections_PrivateTest_h025_MGH7_X300tohh.js  computeYieldsEffs_allSelections_PrivateTest_h025_MGH7_hh_bbyy_vbf_l1cvv1cv1.js  computeYieldsEffs_allSelections_PrivateTest_h025_aMCnlo_Hwpp_hh_yybb.js  computeYieldsEffs_allSelections_test_h025_MGH7_X300tohh.js  computeYieldsEffs_allSelections_test_h025_MGH7_hh_bbyy_vbf_l1cvv1cv1.js  computeYieldsEffs_allSelections_test_h025_aMCnlo_Hwpp_hh_yybb.js  computeYieldsEffs_allSelections_test_h025_ttH.js  test.js  test_negativeWeights.js  test_private.js  test_properWeights.js  test_properWeights_diffProcessor.js
AnalysisFramework/json/H025/Non_Resonant/: Background.js  Background_BDT_noMbb.js  Background_BDT_withTop.js  Signal.js  Signal_BDT_noMbb.js  Signal_BDT_withTop.js  Signal_NLO.js  Signal_NLO_mc16d.js  yyBackground_BDT_noMbb.js
AnalysisFramework/json/H025/Resonant/: Backgrounds.js  Backgrounds_highM.js  Backgrounds_lowM.js  Backgrounds_medM.js  Data.js  Data_highM.js  Data_lowM.js  Data_medM.js  PhotonJetBkg.js  PhotonJetBkg_highM.js  PhotonJetBkg_lowM.js  PhotonJetBkg_medM.js  SM_HH.js  SM_HH_highM.js  SM_HH_lowM.js  SM_HH_medM.js  Signal_X1000.js  Signal_X260.js  Signal_X280.js  Signal_X300.js  Signal_X325.js  Signal_X350.js  Signal_X400.js  Signal_X450.js  Signal_X500.js  Signal_X550.js  Signal_X600.js  Signal_X700.js  Signal_X800.js  Signal_X900.js  YieldIterator_bkg.js  YieldIterator_data.js  YieldIterator_signal.js  YieldIterator_yy.js  h025_MGH7_X300tohh.js
AnalysisFramework/json/H025/ZH/: Backgrounds.js  Data.js  Data_m_yy.js  YieldIterator.js
AnalysisFramework/json/H026/Non_Resonant/: Background.js  Baseline_noVBF_myy_120_130.js  Baseline_skimmed_2bjet.js  Baseline_skimmed_2bjet_myy_120_130.js  Data_skimmed_2bjet.js  HEFT_SM_norm-histo.js  HEFT_benchmarks.js  HEFT_signal_nonRes_fits.js  HH_nonRes_fits.js  HH_nonRes_fits_SR.js  YieldIterator_bkg.js  YieldIterator_bkg_SR.js  overlap_studies_myy_120_130.js  skimmed_H7.js  test.js  testWithFJvt_2bjet.js  test_Signal.js  test_WithFJvt.js  test_WithFJvt_2bjet.js
AnalysisFramework/json/H026/Preselections/: Background.js  YieldIterator_HH_skimmed.js  YieldIterator_bkg.js
AnalysisFramework/json/H027/Preselection/: SH_signal_unskimmed_dummyXS.js  backgrounds.js  skimmed_backgrounds.js
AnalysisFramework/json/Non_Resonant/: Backgrounds.js  Data.js  PhotonJetBkg.js  Signals.js
AnalysisFramework/json/Preselection/: Background.js  Data.js  PhotonJetBkg.js
AnalysisFramework/json/Resonant/: Signals.js
AnalysisFramework/json/ZH/: Backgrounds.js  Data.js  PhotonJetBkg.js  Signals.js
AnalysisFramework/modelling/: .gitignore  CommonFunc.cxx  CommonFunc.h  CommonHead.h  EvaluateTheoryUncertainties_EFT.cxx  FitHistograms.cxx  Modelling_bbyy.C  Modelling_bbyy_mjj.C  README.md  RooExpGaussExpShape.cxx  RooExpGaussExpShape.h  RooTwoSidedCBShape.cxx  RooTwoSidedCBShape.h  run_signal_modelling.py
AnalysisFramework/src/: Controller.cxx  DataAnalysis.cxx  JSONParser.cxx  NtupleDumper.cxx  Plotting.cxx  PrettyPlotter.cxx  ROOTHelper.cxx  VariablePlotter.cxx  YieldIterator.cxx  main.cxx  temp.cxx
AnalysisFramework/utils/: ApplySF.C  ApplySF.sh  ApplySF_Resonant.C  ApplySF_Resonant.sh  Nonresonant_purity.root  README.md  Resonant_purity.root  RunCondor.sh  SubmitCondor.py  checkFile.cxx  compile.sh
bbyySystematics/1_CreateTreesWithSystematics/HHyybb/: CMakeLists.txt
bbyySystematics/1_CreateTreesWithSystematics/HHyybb/HHyybb/: tool_Experimental_Systematics.h
bbyySystematics/1_CreateTreesWithSystematics/HHyybb/Root/: LinkDef.h  tool_Experimental_Systematics.cxx
bbyySystematics/1_CreateTreesWithSystematics/HHyybb/data/: README  tool_Cmp_two_productions.config  tool_CreateTree_ForTMVA_h024_mc16a.config  tool_CreateTree_ForTMVA_h024_mc16d.config  tool_CreateTree_ForTMVA_h024_mc16d.config~  tool_CreateTree_ForTMVA_h024_mc16e.config  tool_CreateTree_selection_HH_baseline_h025.config  tool_CreateTree_selection_HH_baseline_h025.config~  tool_CreateTree_selection_HH_baseline_h026.config  tool_Experimental_Systematics_FlavorSys_h025.config  tool_Experimental_Systematics_FlavorSys_h026.config  tool_Experimental_Systematics_FlavorSys_h026.config~  tool_Experimental_Systematics_JetSys1_h025.config  tool_Experimental_Systematics_JetSys1_h026.config  tool_Experimental_Systematics_JetSys1_h026.config~  tool_Experimental_Systematics_JetSys2_h025.config  tool_Experimental_Systematics_JetSys2_h026.config  tool_Experimental_Systematics_JetSys2_h026.config~  tool_Experimental_Systematics_JetSys3_h025.config  tool_Experimental_Systematics_JetSys3_h026.config  tool_Experimental_Systematics_JetSys3_h026.config~  tool_Experimental_Systematics_h025.config  (+17 more)
(+1712 files in other folders)
